<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="66dp"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/hydra" />

    <TextView
        android:id="@+id/gameDescriptionTv"
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/icon"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/description"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gameNameTv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/game_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gamePriceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/gameGenreTv"
        android:text="@string/price" />

    <TextView
        android:id="@+id/gameGenreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp"
        android:text="@string/genre" />

</RelativeLayout>

